--- a/wp-bib.bib
+++ b/wp-bib.bib
@@ -359,3 +359,37 @@ url={https://www.science.org/doi/10.1126/sciadv.abn3517#elettersSection}
 	file = {Snapshot:C\:\\Users\\au479924\\Zotero\\storage\\97PJ7P6W\\bmsp.html:text/html}
 }
 
+@article{thoemmes2015graphical,
+  title={Graphical representation of missing data problems},
+  author={Thoemmes, Felix and Mohan, Karthika},
+  journal={Structural Equation Modeling: A Multidisciplinary Journal},
+  volume={22},
+  number={4},
+  pages={631--642},
+  year={2015},
+  publisher={Taylor \& Francis}
+}
+
+@article{ding2018causal,
+  title={Causal Inference: A Missing Data Perspective},
+  author={Ding, Peng and Li, Fan},
+  journal={Statistical Science},
+  volume={33},
+  number={2},
+  pages={214--237},
+  year={2018},
+  publisher={JSTOR}
+}
+
+@article{MuellerPearl+2023,
+url = {https://doi.org/10.1515/jci-2022-0050},
+title = {Personalized decision making – A conceptual introduction},
+author = {Scott Mueller and Judea Pearl},
+pages = {20220050},
+volume = {11},
+number = {1},
+journal = {Journal of Causal Inference},
+doi = {doi:10.1515/jci-2022-0050},
+year = {2023},
+lastchecked = {2023-06-21}
+}
